objects/Admin_Training_Document__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Official Article Type to be used for Support Articles</description>
    <fields>
        <fullName>Attachments__c</fullName>
        <label>Attachments</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <label>Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <label>Support Level</label>
        <picklist>
            <picklistValues>
                <fullName>Level 1 BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 1 FO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boundary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Admin Training Document</label>
    <pluralLabel>Admin Training Document</pluralLabel>
</CustomObject>